# course-work-3

./: README.md  config.py  pyproject.toml
src/: main.py  utils.py
tests/: test_utils.py
