[tool.poetry]
name = "course work 3"
version = "0.1.0"
description = "курсовая работа по итогам 3го модуля"
authors = ["ikachaeva <irenkachaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
